--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "name": "vue-notepad",
   "version": "0.2.0",
+  "module": "./src/index.js",
+  "main": "./dist/VueNotepad.umd.min.js",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build --target lib --name VueNotepad ./src/index.js",
