--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "release-patch": "npm version patch; npm run release;",
     "release-minor": "npm version minor; npm run release;",
     "release-major": "npm version major; npm run release;",
-    "release": "npm run build; npm run commit; npm publish; git push --follow-tags;"
+    "release": "npm run build; git add -A && git commit; npm publish; git push --follow-tags;"
   },
   "dependencies": {
     "vue-interface": "^0.4.2"
