--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build --target lib --name VueNotepad ./src/index.js",
     "lint": "vue-cli-service lint",
-    "release-patch": "npm version patch; npm run release;",
-    "release-minor": "npm version minor; npm run release;",
-    "release-major": "npm version major; npm run release;",
-    "release": "npm run build; git add -A && git commit; npm publish; git push --follow-tags;"
+    "release-patch": "npm run build && npm version patch; npm run release;",
+    "release-minor": "npm run build && npm version minor; npm run release;",
+    "release-major": "npm run build && npm version major; npm run release;",
+    "release": "npm run commit; npm publish; git push --follow-tags;"
   },
   "dependencies": {
     "vue-interface": "^0.4.2"
