--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build --target lib --name VueNotepad ./src/index.js",
     "lint": "vue-cli-service lint",
-    "release-patch": "npm run build && npm version patch; npm run release;",
-    "release-minor": "npm run build && npm version minor; npm run release;",
-    "release-major": "npm run build && npm version major; npm run release;",
+    "release-patch": "git add -A && git commit -m 'Pre-release commit'; npm run build && npm version patch; npm run release;",
+    "release-minor": "git add -A && git commit -m 'Pre-release commit'; npm run build && npm version minor; npm run release;",
+    "release-major": "git add -A && git commit -m 'Pre-release commit'; npm run build && npm version major; npm run release;",
     "release": "npm run commit; npm publish; git push --follow-tags;"
   },
   "dependencies": {
